--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
       <nav>
         <a href="/">Home</a>
         
-        <a href="/posts/">Blog</a>
-        <a href="/about/">About</a>
+        <a href="/posts">Blog</a>
+        <a href="/about">About</a>
       </nav>
     </header>
 
