--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,6 @@
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
   font-size: 18px;
 
   @include mobile {
@@ -18,14 +17,14 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $white;
+    color: #fff;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: #fff;
     }
   }
 }
