--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,3 +22,9 @@ nav {
 .page-header {
     padding: 2rem 0rem;
 }
+
+img[alt="youtubethumnails"] { 
+  width:  150px; 
+  height:  150px; 
+  display: block;
+}
